# iu7-oop

./: README.md
lab_01/: CMakeLists.txt
lab_01/data/: cubeModel.txt
lab_01/include/: handlers.h  memory.h  model.h  model_struc.h  points.h  ret_codes.h
lab_01/src/: handlers.cpp  memory.cpp  model.cpp  points.cpp
lab_01/src/ui/: draw.cpp  draw.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
